--- a/css/style.css
+++ b/css/style.css
@@ -480,7 +480,7 @@ header{
 }
 
 .nav-center li a span {
-    font-size: 14px;
+    font-size: 14px !important;
     font-weight: 500
 }
 
@@ -1355,6 +1355,570 @@ nav a{
     font-size: 15px;
   }
 }
+
+
+
+
+
+.projects a:hover {
+    text-decoration: none;
+}
+.projects .owl-item {
+filter: grayscale(100%);
+}
+.projects .owl-item.active.center {
+  filter: inherit;
+}
+
+
+.projects {
+    background: #f8f8f8;
+    padding: 60px 0;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-position: center;
+
+}
+
+.projects .owl-carousel img {
+    height: 415px;
+    object-fit: cover;
+    width: 100%;
+}
+
+.projects .owl-carousel .owl-item {
+    overflow: hidden;
+    transition: 0.3s;
+    border: 2px solid #f5f6fa;
+    border-radius: 12px;
+    width: 100%;
+}
+
+.projects .owl-carousel {
+    position: relative;
+}
+
+.projects .owl-nav .owl-prev {
+    position: absolute;
+    top: 40%;
+    left: 29%!important;
+    transform: translateY(-50%);
+    width: 62px;
+    height: 62px;
+    background-color: #fff !important;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.3s all;
+}
+
+
+.projects .owl-nav .owl-next {
+    position: absolute;
+    top: 40%;
+    right: 29%!important;
+    transform: translateY(-50%);
+    width: 62px;
+    height: 62px;
+    background-color: #fff !important;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.3s all;
+}
+
+.projects .owl-nav .owl-next:last-child svg {
+    transform: rotate(180deg);
+}
+
+.projects .section-title h2 {
+    line-height: 1.23;
+    font-weight: 700;
+    font-size: 32px;
+    margin: 0;
+    color: #000;
+    text-transform: unset;
+}
+
+
+/* PARTNERS SECTION*/
+.section-title {
+    text-align: center;
+    margin: 0 auto;
+}
+
+/* end o fburger menu section*/
+@media only screen and (max-width: 991px) {
+
+    .projects .owl-nav .owl-next,
+    .projects .owl-nav .owl-prev {
+        background: #ff5a2d82 !important;
+    }
+
+    .projects .owl-nav .owl-next svg path,
+    .projects .owl-nav .owl-prev svg path {
+        fill: #fff;
+    }
+
+    body {
+        padding-bottom: 60px;
+    }
+
+    .projects .owl-nav .owl-prev {
+        left: 0;
+    }
+
+    .projects .owl-nav .owl-next {
+        right: 0;
+    }
+
+   
+}
+
+
+.projects .owl-carousel {
+  position: relative;
+}
+.projects .owl-nav .owl-prev { 
+  position: absolute;
+  top: 40%;
+  left: 29%;
+  transform: translateY(-50%);
+  width: 62px;
+  height: 62px;
+  background-color: #fff !important;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s all;
+}
+
+
+
+
+.projects .owl-nav .owl-next { 
+  position: absolute;
+  top: 40%;
+  right: 29%;
+  transform: translateY(-50%);
+  width: 62px;
+  height: 62px;
+  background-color: #fff !important;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s all;
+}
+.projects .owl-nav .owl-next:last-child  svg{
+    transform: rotate(180deg);
+}
+@media only screen and (max-width: 991px) {
+ 
+  .projects .owl-nav .owl-next, .projects .owl-nav .owl-prev {
+      background:#dfc29e !important;
+  }
+  .projects .owl-nav .owl-next svg path, .projects .owl-nav .owl-prev svg path{
+      fill:#fff;
+  }
+.projects {
+    padding-bottom: 30px;
+}
+
+  
+
+.projects .owl-nav .owl-prev{
+  left: 0!important;
+}
+.projects .owl-nav .owl-next{
+  right:0!important;
+}
+
+}
+
+/*new-slider*/
+
+/* Слайды */
+
+/* === Вертикальный прогресс-бар слева === */
+
+
+
+/* Кнопки */
+
+
+
+.owl-dots.disabled {
+  display: none;
+}
+
+.owl-carousel .owl-stage-outer {
+  margin-bottom: 0;
+}
+
+/* header */
+
+/*header #myMenu .navbar-nav .nav-item:hover .nav-link,*/
+/*header #myMenu .navbar-nav .nav-item.active .nav-link {*/
+/*  color: #c2a73d;*/
+/*}*/
+a:hover {
+    color:inherit;
+}
+
+
+
+
+
+/* main section */
+
+/*#main #wowslider-container1 .lines .line {*/
+/*  width: 60px;*/
+/*  height: 100%;*/
+/*  position: relative;*/
+/*}*/
+
+/*#main #wowslider-container1 .lines .line::before {*/
+/*  content: '';*/
+/*  position: absolute;*/
+/*  top: 0;*/
+/*  left: 0;*/
+/*  width: 1px;*/
+/*  height: 100%;*/
+/*  background-color: rgba(255, 255, 255, 0.2);*/
+/*  z-index: 1;*/
+/*}*/
+
+/* best products */
+
+/* categories */
+
+/* stores */
+
+/*#stores .stores-row p {*/
+/*  font-size: 20px;*/
+/*  font-weight: 500;*/
+/*  line-height: 32px;*/
+/*}*/
+
+/*#stores .stores-row .stores-wrap {*/
+/*  position: absolute;*/
+/*  top: 60px;*/
+/*  right: 100px;*/
+/*}*/
+
+/*#stores .stores-row .stores-wrap .store-box-wrap {*/
+/*    width: 47%;*/
+/*}*/
+
+/* news */
+
+/* call-to-action */
+
+/* footer */
+
+
+/* modal */
+
+
+/* pagination */
+
+
+/* form */
+
+
+/* breadcrumb */
+
+
+/* inside pages */
+
+
+@media only screen and (max-width: 1600px) {
+  /*header {*/
+  /*  padding: 60px 180px 60px 60px;*/
+  /*}*/
+  
+  /*#stores .stores-row .stores-wrap {*/
+  /*  right: 70px;*/
+  /*}*/
+}
+
+
+@media only screen and (max-width: 1530px) {
+  /*#stores .stores-row .stores-wrap .store-box-wrap .store-box .store-text {*/
+  /*  padding: 8px 10px;*/
+  /*}*/
+}
+
+
+@media only screen and (max-width: 575.99px) {
+    
+    /*.full-content .bullets img, */
+    /*#productModal .carousel-indicators button {*/
+    /*    margin: 0 10px;*/
+    /*}*/
+}
+/**
+ * Owl Carousel v2.3.4
+ * Copyright 2013-2018 David Deutsch
+ * Licensed under: SEE LICENSE IN https://github.com/OwlCarousel2/OwlCarousel2/blob/master/LICENSE
+ */
+.owl-carousel,
+.owl-carousel .owl-item {
+	-webkit-tap-highlight-color: transparent;
+	position: relative
+}
+
+.owl-carousel {
+	display: none;
+	width: 100%;
+	z-index: 1
+}
+
+.owl-carousel .owl-stage {
+	position: relative;
+	-ms-touch-action: pan-Y;
+	touch-action: manipulation;
+	-moz-backface-visibility: hidden
+}
+
+.owl-carousel .owl-stage:after {
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0
+}
+
+.owl-carousel .owl-stage-outer {
+	position: relative;
+	overflow: hidden;
+	-webkit-transform: translate3d(0, 0, 0);
+	margin-bottom: 20px;
+}
+
+.owl-carousel .owl-item,
+.owl-carousel .owl-wrapper {
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
+	-ms-backface-visibility: hidden;
+	-webkit-transform: translate3d(0, 0, 0);
+	-moz-transform: translate3d(0, 0, 0);
+	-ms-transform: translate3d(0, 0, 0)
+}
+
+.owl-carousel .owl-item {
+	min-height: 1px;
+	float: left;
+	-webkit-backface-visibility: hidden;
+	-webkit-touch-callout: none
+}
+
+.owl-carousel .owl-item img {
+	display: block;
+	width: 100%
+}
+
+/*.owl-carousel .owl-dots.disabled,.owl-carousel .owl-nav.disabled{display:none}*/
+.no-js .owl-carousel,
+.owl-carousel.owl-loaded {
+	display: block
+}
+
+.owl-carousel .owl-dot,
+.owl-carousel .owl-nav .owl-next,
+.owl-carousel .owl-nav .owl-prev {
+	cursor: pointer;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none
+}
+
+.owl-carousel .owl-nav button.owl-next,
+.owl-carousel .owl-nav button.owl-prev,
+.owl-carousel button.owl-dot {
+	color: white;
+	padding: 8px 15px;
+	border-radius: 50%;
+	border: 7px solid white;
+	position: absolute;
+	transition: 300ms all ease
+}
+
+.owl-carousel .owl-nav button.owl-next,
+.owl-carousel .owl-nav button.owl-prev {
+	background: #e8e8e8;
+}
+
+/* .owl-carousel button.owl-dot {
+	background: #f58220;
+} */
+
+.owl-carousel .owl-nav button.owl-prev {
+	left: -42px;
+	top: 40%;
+}
+
+.owl-carousel .owl-nav button.owl-next {
+	right: -42px;
+	top: 40%;
+}
+
+.owl-carousel.owl-loading {
+	opacity: 0;
+	display: block
+}
+
+.owl-carousel.owl-hidden {
+	opacity: 0
+}
+
+.owl-carousel.owl-refresh .owl-item {
+	visibility: hidden
+}
+
+.owl-carousel.owl-drag .owl-item {
+	-ms-touch-action: pan-y;
+	touch-action: pan-y;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none
+}
+
+.owl-carousel.owl-grab {
+	cursor: move;
+	cursor: grab
+}
+
+.owl-carousel.owl-rtl {
+	direction: rtl
+}
+
+.owl-carousel.owl-rtl .owl-item {
+	float: right
+}
+
+.owl-carousel .animated {
+	animation-duration: 1s;
+	animation-fill-mode: both
+}
+
+.owl-carousel .owl-animated-in {
+	z-index: 0
+}
+
+.owl-carousel .owl-animated-out {
+	z-index: 1
+}
+
+.owl-carousel .fadeOut {
+	animation-name: fadeOut
+}
+
+@keyframes fadeOut {
+	0% {
+		opacity: 1
+	}
+
+	100% {
+		opacity: 0
+	}
+}
+
+.owl-height {
+	transition: height .5s ease-in-out
+}
+
+.owl-carousel .owl-item .owl-lazy {
+	opacity: 0;
+	transition: opacity .4s ease
+}
+
+.owl-carousel .owl-item .owl-lazy:not([src]),
+.owl-carousel .owl-item .owl-lazy[src^=""] {
+	max-height: 0
+}
+
+.owl-carousel .owl-item img.owl-lazy {
+	transform-style: preserve-3d
+}
+
+.owl-carousel .owl-video-wrapper {
+	position: relative;
+	height: 100%;
+	background: #000
+}
+
+.owl-carousel .owl-video-play-icon {
+	position: absolute;
+	height: 80px;
+	width: 80px;
+	left: 50%;
+	top: 50%;
+	margin-left: -40px;
+	margin-top: -40px;
+	background: url(owl.video.play.png) no-repeat;
+	cursor: pointer;
+	z-index: 1;
+	-webkit-backface-visibility: hidden;
+	transition: transform .1s ease
+}
+
+.owl-carousel .owl-video-play-icon:hover {
+	-ms-transform: scale(1.3, 1.3);
+	transform: scale(1.3, 1.3)
+}
+
+.owl-carousel .owl-video-playing .owl-video-play-icon,
+.owl-carousel .owl-video-playing .owl-video-tn {
+	display: none
+}
+
+.owl-carousel .owl-video-tn {
+	opacity: 0;
+	height: 100%;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	transition: opacity .4s ease
+}
+
+.owl-carousel .owl-video-frame {
+	position: relative;
+	z-index: 1;
+	height: 100%;
+	width: 100%
+}/**
+ * Owl Carousel v2.3.4
+ * Copyright 2013-2018 David Deutsch
+ * Licensed under: SEE LICENSE IN https://github.com/OwlCarousel2/OwlCarousel2/blob/master/LICENSE
+ */
+.owl-theme .owl-dots,.owl-theme .owl-nav
+{-webkit-tap-highlight-color:transparent}
+.owl-theme .owl-nav{margin-right: 200px;float:right;bottom: -60px;}
+.owl-theme .owl-nav [class*=owl-]{color:#FFF;font-size:14px;margin:5px;padding:4px 7px;background:#D6D6D6;display:inline-block;cursor:pointer}
+.owl-theme .owl-nav [class*=owl-]:hover{background:#fff;color:#ccc;text-decoration:none}
+.owl-theme .owl-nav .disabled{opacity:.5;cursor:default}
+.owl-theme .owl-nav.disabled+.owl-dots{margin-top:10px}
+.owl-theme .owl-dots .owl-dot{display:inline-block;zoom:1}
+.owl-theme .owl-dots .owl-dot span{width:10px;height:10px;margin:5px 7px;background:#D6D6D6;display:block;-webkit-backface-visibility:visible;transition:opacity .2s ease;border-radius:30px}
+.owl-theme .owl-dots .owl-dot:hover span{background:#869791}
+
+
+
+
+
+
 
 
 .footer-head .row,.footer-right .row,.row {
