--- a/css/style.css
+++ b/css/style.css
@@ -895,12 +895,37 @@ nav a{
       nav, .nav-wrapper{
         justify-content: space-between !important;
       }
+      .logo img{
+        min-width: 120px;
+      }
+      .btn{
+        font-size: 12px;
+    letter-spacing: 0.03em;
+    padding: 15px 20px;
+      }
+      .hero-caption p{
+        font-size: 16px;
+      }
+      #hero .owl-nav button{
+        height: 65px !important;
+        width: 65px !important;
+      }
+      .about-left p{
+        font-size: 14px;
+      }
+      .application-section{
+        padding: 40px 0 !important;
+      }
+      .about-section{
+        padding: 40px 0 !important;
+      }
     }
     
 
     #hero{
       margin-bottom: 60px;
     }
+    
 
     :root {
       --accent: #e44a1b;
@@ -1039,7 +1064,7 @@ nav a{
 
     @media (max-width:768px){
       .slide-content{
-        padding-left: 10px;
+        padding-left: 20px;
       }
       .slide-content p{
             font-size: 15px;
@@ -1047,6 +1072,9 @@ nav a{
       }
       .slide-btn{
         width: fit-content !important;
+      }
+      h2{
+        font-size: 28px !important;
       }
     }
 
@@ -1162,7 +1190,7 @@ nav a{
 .about-section {
   position: relative;
   background: #f2f3f5;
-  padding: 40px 0;
+  padding: 80px 0;
   text-align: center;
 }
 
@@ -1311,7 +1339,7 @@ nav a{
     flex-direction: column-reverse;
     align-items: center;
     gap: 40px;
-    padding: 60px 0;
+    padding: 25px 0;
   }
 
   .about-left {
