--- a/css/style.css
+++ b/css/style.css
@@ -575,6 +575,7 @@ header{
 
     .logo img {
         max-width: 150px
+
     }
 }
 
@@ -897,6 +898,7 @@ nav a{
       }
       .logo img{
         min-width: 120px;
+        height: 36px;
       }
       .btn{
         font-size: 12px;
